--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 FBLikeLayout Sample.xcodeproj/project.xcworkspace/xcuserdata/Lorentz.xcuserdatad/UserInterfaceState.xcuserstate
 
 FBLikeLayout Sample.xcodeproj/project.xcworkspace/xcuserdata/Lorentz.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
