--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ FBLikeLayout Sample.xcodeproj/project.xcworkspace/xcuserdata/Lorentz.xcuserdatad
 FBLikeLayout Sample.xcodeproj/project.xcworkspace/xcuserdata/Lorentz.xcuserdatad/UserInterfaceState.xcuserstate
 
 *.xcuserstate
+
+*.xcuserstate
