--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ FBLikeLayout Sample.xcodeproj/project.xcworkspace/xcuserdata/Lorentz.xcuserdatad
 *.xcuserstate
 
 *.xcuserstate
+
+*.xcuserstate
+
+*.xcbkptlist
