--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,1 @@
-
-*.xccheckout
-
-*.xcuserstate
-
-FBLikeLayout Sample.xcodeproj/project.xcworkspace/xcuserdata/Lorentz.xcuserdatad/UserInterfaceState.xcuserstate
-
-FBLikeLayout Sample.xcodeproj/project.xcworkspace/xcuserdata/Lorentz.xcuserdatad/UserInterfaceState.xcuserstate
-
-*.xcuserstate
-
-*.xcuserstate
-
-*.xcuserstate
-
-*.xcbkptlist
+*.xcuserdatad
